--- a/app/src/main/res/layout/filter_map.xml
+++ b/app/src/main/res/layout/filter_map.xml
@@ -107,9 +107,9 @@
         android:id="@+id/list_products"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:visibility="visible"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView29" />
 
