--- a/app/src/main/res/layout/selectedshop.xml
+++ b/app/src/main/res/layout/selectedshop.xml
@@ -114,8 +114,8 @@
 
     <ListView
         android:id="@+id/ListOfShopItems"
-        android:layout_width="411dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="418dp"
         app:layout_constraintBottom_toTopOf="@+id/button_scan_products"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
