--- a/app/src/main/res/layout/farm_store.xml
+++ b/app/src/main/res/layout/farm_store.xml
@@ -4,15 +4,10 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textCountry"
+        android:id="@+id/textFarmStoreName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
-
-    <TextView
-        android:id="@+id/textAmountOfStations"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
 </LinearLayout>
 
