--- a/app/src/main/res/layout/shoplist.xml
+++ b/app/src/main/res/layout/shoplist.xml
@@ -35,7 +35,8 @@
         tools:layout_editor_absoluteX="198dp" /> -->
 
 
-    <ListView
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listOfShops"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -48,10 +49,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4">
-
-
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
 
     <Button
         android:id="@+id/button4"
@@ -72,6 +70,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
