--- a/app/src/main/res/layout/farm_store.xml
+++ b/app/src/main/res/layout/farm_store.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/farm_store"
+    android:showDividers="middle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
-    <Button
+   <TextView
         android:id="@+id/textFarmStoreName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Button" />
+       android:text="Test FSL"
+       android:layout_centerInParent="true"
+       android:textSize="30sp"
+       android:padding="10dp"
+       android:textAlignment="center"
+       android:textColor="#fff"
+       android:background="#555"
+        />
 
-</LinearLayout>
+
+
+ </LinearLayout>
 
 
 
