--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -8,7 +8,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/item1"
-        android:title="Options" />
+        android:title="Profile" />
     <item
         android:id="@+id/item2"
         android:title="Logout" />
